 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen, gl.MultiTexCoord
 - remove gl.CreateList, gl.CallList, gl.DeleteList
 - remove gl.DrawListAtUnit
 - remove gl.Shape
 - remove gl.EdgeFlag
 - remove gl.GetGlobalTex{Names,Coords}
 - remove gl.LineStipple
 - remove gl.LineWidth
 - remove gl.AlphaTest
 - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
 - remove LuaMaterial {pre,post}list handling
 - remove 'useCamera' LuaMaterial parameter
 - remove 'identities' gl.ActiveFBO argument
 - add gl.{Create,Delete,Update,Render}VertexArray
     gl.CreateVertexArray(number vertexCount, number indexCount) -> number id | nil
     gl.DeleteVertexArray(number id) -> boolean success | nil
     gl.UpdateVertexArray(number id, number vertexPos, number indexPos, table vertexData | function updateFunc [, args...]) -> boolean success | nil
     gl.RenderVertexArray(number id) -> boolean success | nil
 - add gl.GetDefaultShaderSources(string shaderName) -> table | nil
     shaderName can be one of {"0", "C", "T",  "T4", "TN", "TC",  "2D0", "2DT"}
     table contains vertex/fragment/... source strings for the respective engine
     shader used internally to draw UI elements, etc ("0" means the given shader
     only receives position attributes, "C" means it receives colors, "T" means
     it receives texture coors, "N" means it receives normals, and "XY" means it
     receives X and Y)
 - add `VFS.GAME` as a synonym to `VFS.MOD`
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this
 - move GetConfig* to LuaUnsyncedRead
 - Add Spring.SetVideoCapturingTimeOffset() for > 30fps video capturing
 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously